--- a/styles.css
+++ b/styles.css
@@ -733,45 +733,24 @@ body {
     color: var(--text-color);
 }
 
+/* Unavailable Message Styles */
+.unavailable-message {
+  color: var(--secondary-text);
+  font-size: 18px;
+  margin-top: 20px;
+  text-align: center;
+  background-color: var(--content-bg);
+  padding: 20px;
+  border: 2px solid var(--accent-color);
+  border-radius: 10px;
+  box-shadow: 0 4px 8px var(--shadow-color);
+}
+
+.unavailable-message-title {
+  font-size: 22px;
   font-weight: bold;
   margin-bottom: 10px;
   color: var(--text-color);
-}
-
-/* Unavailable Message Styles */
-.unavailable-message {
-    color: var(--secondary-text);  /* Text color */
-    font-size: 18px;
-    margin-top: 20px;
-    text-align: center;
-    background-color: var(--content-bg); /* Background color */
-    padding: 20px;
-    border: 2px solid var(--accent-color); /* Accent border color */
-    border-radius: 10px;
-    box-shadow: 0 4px 8px var(--shadow-color); /* Box shadow for effect */
-}
-
-/* Title of Unavailable Message */
-.unavailable-message-title {
-    font-size: 22px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: var(--text-color); /* Color of title text */
-}
-
-/* TikTok Specific Unavailable Message */
-.tiktok-unavailable-message {
-    display: none; /* Hidden by default */
-}
-
-/* Instagram Specific Unavailable Message */
-.instagram-unavailable-message {
-    display: none; /* Hidden by default */
-}
-
-/* YouTube Specific Unavailable Message */
-.youtube-unavailable-message {
-    display: none; /* Hidden by default */
 }
 
 :root {
