--- a/styles.css
+++ b/styles.css
@@ -1738,7 +1738,6 @@ body.focus-outline-disabled :focus {
 .timezone {
     font-size: 1.1rem;
     margin-bottom: 10px;
-    font-weight: bold;
 }
 
 /* Hours Title Styling */
@@ -1762,6 +1761,10 @@ body.focus-outline-disabled :focus {
     border-bottom: 1px solid var(--border-color);
     transition: background-color 0.3s ease, color 0.3s ease;
     font-weight: bold;
+}
+
+.hours-row span {
+    font-weight: normal;
 }
 
 .hours-row:last-child {
